<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPrivateContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Personal Contacts</string>
    <string name="add_user_button_title">ADD CONTACT</string>
    <string name="view_user_button_title">VIEW CONTACT</string>
    <string name="search_user_button_title">SEARCH CONTACT</string>
    <string name="update_user_button_title">UPDATE CONTACT</string>
    <string name="delete_user_button_title">DELETE CONTACT</string>
    <string name="sign_out_textview">Sign Out</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="new_user_id_title">Add New User Information</string>
    <string name="contact_name_title">Contact Name</string>
    <string name="contact_mobile_title">Mobile Number</string>
    <string name="contact_email_title">Email Address</string>
    <string name="save_contact_button_title">SAVE</string>
    <string name="title_activity_data_list">DataListActivity</string>
    <string name="title_activity_search_contact">SearchContactActivity</string>
    <string name="search_button_prompt">SEARCH</string>
    <string name="enter_name_prompt">Enter name</string>
    <string name="name_here_prompt">Name Here</string>
    <string name="email_here_prompt">Email Here</string>
    <string name="mobile_here_prompt">Mobile Here</string>
    <string name="delete_button_prompt">Delete Contact</string>
    <string name="update_button_prompt">Update Contact</string>
    <string name="title_activity_update_contact">UpdateContactActivity</string>

</resources>
