<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#ffff645d">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/app_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:textColor="#ff5540ff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_button_title"
        android:id="@+id/add_contact_button"
        android:background="#ffffbc59"
        android:layout_below="@+id/app_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_user_button_title"
        android:id="@+id/view_contact_button"
        android:background="#FFFFBC59"
        android:layout_below="@+id/add_contact_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="viewContact"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_user_button_title"
        android:id="@+id/search_contact_button"
        android:background="#FFFFBC59"
        android:layout_below="@+id/view_contact_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_button_title"
        android:id="@+id/update_contact_button"
        android:background="#FFFFBC59"
        android:layout_below="@+id/search_contact_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_button_title"
        android:id="@+id/delete_contact_button"
        android:background="#FFFFBC59"
        android:layout_below="@+id/update_contact_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_textview"
        android:id="@+id/logout_id"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
</RelativeLayout>
