<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.android.myprivatecontacts.SearchContactActivity"
                android:background="#A74D4D">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/enter_name_prompt"
        android:layout_toLeftOf="@+id/search_name_btn"
        android:layout_toStartOf="@+id/search_name_btn"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/search_button_prompt"
        android:id="@+id/search_name_btn"
        android:onClick="searchContact"
        android:layout_above="@+id/display_email"
        android:layout_alignRight="@+id/display_email"
        android:layout_alignEnd="@+id/display_email"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_here_prompt"
        android:id="@+id/display_email"
        android:layout_below="@+id/search_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_here_prompt"
        android:id="@+id/display_mobile"
        android:layout_below="@+id/display_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_prompt"
        android:id="@+id/delete_name_btn"
        android:onClick="deleteContact"
        android:layout_below="@+id/display_mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"/>
</RelativeLayout>
